# snowmigrate-tui

./: .gitignore  README.md  pyproject.toml
src/snowmigrate/: __init__.py  app.py  config.py  styles.tcss
src/snowmigrate/cli/: __init__.py
src/snowmigrate/models/: __init__.py  connection.py  migration.py  staging.py
src/snowmigrate/screens/: __init__.py  browser.py  connections.py  dashboard.py  migration_config.py
src/snowmigrate/services/: __init__.py  connection_manager.py  metadata_service.py  migration_engine.py
src/snowmigrate/widgets/: __init__.py  connection_card.py  migration_row.py  staging_selector.py
tests/: __init__.py  test_config.py  test_models.py  test_services.py
